--- a/cheesecake.html
+++ b/cheesecake.html
@@ -1,107 +1,130 @@
 <!DOCTYPE html>
-<html >
-  <head>
+<html>
+
+<head>
     <meta charset="UTF-8">
     <title>Materialize CSS Project Template</title>
 
 
 
     <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css'>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css'>
 
-        <link rel="stylesheet" href="css/style.css">
-
-
+    <link rel="stylesheet" href="css/style.css">
 
 
-  </head>
 
-  <body>
+
+</head>
+
+<body style="background-color:  #ffccbc;">
 
     <!-- Edited version of: http://materializecss.com/templates/starter-template/preview.html
 Search for the text "TODO" in this HTML file, to know what changes you should make when you take this project off of Code Pen to run elsewhere.
 -->
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Starter Template - Materialize</title>
+    <html>
 
-    <!-- CSS
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+        <title>Starter Template - Materialize</title>
+
+        <!-- CSS
       TODO: Uncomment these stylesheet link elements once you move this code off of Code Pen.
       These stylesheet link elements have been commented out for Code Pen, as we're including the first two stylesheets as "External CSS" using the Code Pen interface instead, and our equivalent of the "css/style.css" file will just be the CSS written in the CSS section of our Code Pen. -->
 
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-      <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  </head>
-  <body>
-    <nav>
-    <div class="nav-wrapper">
-      <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i>Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="deserturi.html"><i class="material-icons">undo</i></a></li>
-        <li><a href="index.html"><i class="material-icons">view_module</i></a></li>
-        <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
-        <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
-      </ul>
-    </div>
-    </nav>
-<div class="row">
-   <div class="col s12 m7">
-     <div class="card">
-       <div class="card-image">
-         <img src="https://bananachocolate.files.wordpress.com/2013/07/white-chocolate-cheesecake-141.jpg">
-         <span class="card-title"><h2>Cheesecake</h2></span>
-       </div>
-       <div class="card-content">
-         <script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    </head>
 
-var ingrediente = ['Ingrediente: ','- 900 gr crema de branza (tip philadelphia)', '- 1/2 baton vanilie','- 200 gr zahar', ' - 100 gr smantana acra','- 4 oua', '- 80 gr ciocolata neagra (75 %)',
-   '- 1 priza scortisoara', '- 200 gr biscuiti cu cacao (am folosit Belvita Start cu ciocolata)',' - 90 gr unt', ' Mod de Preparare: ',
-   ' 1. Se maruntesc biscuitii in robot sau masina de cafea. Se adauga untul topit si scortisoara si se amesteca bine pana biscuitii sunt umezi.',
-   ' 2. Se tapeteaza fundul unei tavi cu pereti detasabili (diametru 26 cm; cu hartie de copt pe fund) cu biscuiti (apasati usor pe margini sa se formeze o mica bordura). Se da tava la rece pana pregatim umplutura.',
-    '3. Se freaca branza un pic pana se inmoaie. Se adauga zaharul si miezul de la batonul de vanilie (sau zahar vanilat; sau esenta de vanilie) si se mai amesteca inca 2-3 minute. Se adauga smantana.',
-   '4. Se adauga apoi cate un ou pe rand pana sunt complet incorporate.',
-   ' 5. Se toarna 2/3 din amestec in tava, peste crusta de biscuiti. Se loveste usor tava de masa ca sa se aseze uniform umplutura.',
-    ' 6. Se topeste pe abur (sau in microunde) ciocolata. Se adauga restul de umplutura in ciocolata (la inceput puneti putina umplutura si amestecati bine, apoi dupa ce ati adaugat 2-3 linguri puteti sa o adaugati pe toata o data). Omogenizati, adaugand si scortisoara.',
-  '7. Puneti umplutura cu ciocolata intr-un spritz de patiserie la care montati un varf rotund si destul de subtire.',
-   '8. Introduceti usor varful in umplutura (cativa mm) si strangeti pana vedeti ca la suprafata s-a format un cerc cam cat o moneda de 10 bani. Continuati sa formati buline pe toata suprafata cheesecake-ului. ',
-   ' 9. Dati tava la cuptor, la 150C. In cuptor, cand il incalziti, chiar jos asezati o tava cu apa (ca sa se faca aburi). Coaceti cheesecakeul timp de 1 ora.',
-   ' 10. Stingeti focul si lasati-l sa se raceasca in cuptor.',
-          '11. Introduceti-l la frigider si lasati-l peste noapte.','12. Se feliaza usor cu un cutit trecut prin apa fierbinte.'];
-  for(var i in ingrediente){
-    var x = document.getElementById('divi');
-    document.write('<p>' + ingrediente[i] + '</p>');
-  }
-</script>
-<div id = "divi"> </div>
-<div id="divi">
+    <body>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i>Logo</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="deserturi.html"><i class="material-icons">undo</i></a></li>
+                    <li><a href="index.html"><i class="material-icons">view_module</i></a></li>
+                    <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
+                    <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="row">
+            <div class="col s12 m7">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://bananachocolate.files.wordpress.com/2013/07/white-chocolate-cheesecake-141.jpg">
+                        <span class="card-title"><h2>Cheesecake</h2></span>
+                    </div>
+                    <div class="card-content">
+                        <script>
+                            var ingrediente = ['Ingrediente: ', '- 900 gr crema de branza (tip philadelphia)', '- 1/2 baton vanilie', '- 200 gr zahar', ' - 100 gr smantana acra', '- 4 oua', '- 80 gr ciocolata neagra (75 %)',
+                                '- 1 priza scortisoara', '- 200 gr biscuiti cu cacao (am folosit Belvita Start cu ciocolata)', ' - 90 gr unt', ' Mod de Preparare: ',
+                                ' 1. Se maruntesc biscuitii in robot sau masina de cafea. Se adauga untul topit si scortisoara si se amesteca bine pana biscuitii sunt umezi.',
+                                ' 2. Se tapeteaza fundul unei tavi cu pereti detasabili (diametru 26 cm; cu hartie de copt pe fund) cu biscuiti (apasati usor pe margini sa se formeze o mica bordura). Se da tava la rece pana pregatim umplutura.',
+                                '3. Se freaca branza un pic pana se inmoaie. Se adauga zaharul si miezul de la batonul de vanilie (sau zahar vanilat; sau esenta de vanilie) si se mai amesteca inca 2-3 minute. Se adauga smantana.',
+                                '4. Se adauga apoi cate un ou pe rand pana sunt complet incorporate.',
+                                ' 5. Se toarna 2/3 din amestec in tava, peste crusta de biscuiti. Se loveste usor tava de masa ca sa se aseze uniform umplutura.',
+                                ' 6. Se topeste pe abur (sau in microunde) ciocolata. Se adauga restul de umplutura in ciocolata (la inceput puneti putina umplutura si amestecati bine, apoi dupa ce ati adaugat 2-3 linguri puteti sa o adaugati pe toata o data). Omogenizati, adaugand si scortisoara.',
+                                '7. Puneti umplutura cu ciocolata intr-un spritz de patiserie la care montati un varf rotund si destul de subtire.',
+                                '8. Introduceti usor varful in umplutura (cativa mm) si strangeti pana vedeti ca la suprafata s-a format un cerc cam cat o moneda de 10 bani. Continuati sa formati buline pe toata suprafata cheesecake-ului. ',
+                                ' 9. Dati tava la cuptor, la 150C. In cuptor, cand il incalziti, chiar jos asezati o tava cu apa (ca sa se faca aburi). Coaceti cheesecakeul timp de 1 ora.',
+                                ' 10. Stingeti focul si lasati-l sa se raceasca in cuptor.',
+                                '11. Introduceti-l la frigider si lasati-l peste noapte.', '12. Se feliaza usor cu un cutit trecut prin apa fierbinte.'
+                            ];
+                            for (var i in ingrediente) {
+                                var x = document.getElementById('divi');
+                                document.write('<p>' + ingrediente[i] + '</p>');
+                            }
+                        </script>
+                        <div id="divi"> </div>
+                        <div id="divi">
 
 
-       </div>
-       <div class="card-action">
-         <a href="http://www.jamilacuisine.ro/cheesecake-fara-coacere-reteta-video/">Find more!</a>
-       </div>
-     </div>
-   </div>
- </div>
+                        </div>
+                        <div class="card-action">
+                            <a href="http://www.jamilacuisine.ro/cheesecake-fara-coacere-reteta-video/">Find more!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
- <!--  Scripts
+            <!--  Scripts
    TODO: Uncomment these script elements once you move this code off of Code Pen.
    These script elements have been commented out for Code Pen, as we're including the first two script elements as "External JavaScript" using the Code Pen interface instead, and our equivalent of the "js/init.js" file will just be the JavaScript written in the JS section of our Code Pen. -->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-   <script src="../../bin/materialize.js"></script>
-   <script src="js/init.js"></script>
- </body>
- </html>
- <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
- <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
+            <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script src="../../bin/materialize.js"></script>
+            <script src="js/init.js"></script>
+    </body>
 
-     <script src="js/index.js"></script>
+    </html>
+    <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
+
+    <script src="js/index.js"></script>
 
 
 
 
- </body>
- </html>
+</body>
+
+<footer class="page-footer brown">
+    <div class="container ">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="red-text text-accent-1">Activam si pe retelele de socializare:</h5>
+
+                <ul>
+
+                    <li><a class="red-text text-accent-1" href="https://www.instagram.com/">Instagram</a></li>
+                    <li><a class="red-text text-accent-1" href="https://www.facebook.com/">Facebook</a></li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+</html>
