--- a/deserturi.html
+++ b/deserturi.html
@@ -16,7 +16,7 @@
 
   </head>
 
-  <body>
+  <body style="background-color:  #ffccbc;">
 
     <!-- Edited version of: http://materializecss.com/templates/starter-template/preview.html
 Search for the text "TODO" in this HTML file, to know what changes you should make when you take this project off of Code Pen to run elsewhere.
@@ -79,29 +79,21 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 
 
 </body>
-<footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
+<footer class="page-footer brown">
+    <div class="container ">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="red-text text-accent-1">Activam si pe retelele de socializare:</h5>
+
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+
+                    <li><a class="red-text text-accent-1" href="https://www.instagram.com/">Instagram</a></li>
+                    <li><a class="red-text text-accent-1" href="https://www.facebook.com/">Facebook</a></li>
+
                 </ul>
-              </div>
             </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
-          </div>
-        </footer>
+        </div>
+    </div>
+</footer>
+
 </html>
