--- a/pireucartofi.html
+++ b/pireucartofi.html
@@ -96,4 +96,22 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 
 
  </body>
+ 
+ <footer class="page-footer brown">
+     <div class="container ">
+         <div class="row">
+             <div class="col l6 s12">
+                 <h5 class="red-text text-accent-1">Activam si pe retelele de socializare:</h5>
+
+                 <ul>
+
+                     <li><a class="red-text text-accent-1" href="https://www.instagram.com/">Instagram</a></li>
+                     <li><a class="red-text text-accent-1" href="https://www.facebook.com/">Facebook</a></li>
+
+                 </ul>
+             </div>
+         </div>
+     </div>
+ </footer>
+
  </html>
