--- a/caroficumenta.html
+++ b/caroficumenta.html
@@ -1,116 +1,123 @@
 <!DOCTYPE html>
-<html >
-  <head>
+<html>
+
+<head>
     <meta charset="UTF-8">
     <title>Materialize CSS Project Template</title>
 
 
 
     <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css'>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css'>
 
-        <link rel="stylesheet" href="css/style.css">
-
-
+    <link rel="stylesheet" href="css/style.css">
 
 
-  </head>
 
-  <body style="background-color:  #ffccbc;">
+
+</head>
+
+<body style="background-color:  #ffccbc;">
 
     <!-- Edited version of: http://materializecss.com/templates/starter-template/preview.html
 Search for the text "TODO" in this HTML file, to know what changes you should make when you take this project off of Code Pen to run elsewhere.
 -->
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Starter Template - Materialize</title>
+    <html>
 
-    <!-- CSS
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+        <title>Starter Template - Materialize</title>
+
+        <!-- CSS
       TODO: Uncomment these stylesheet link elements once you move this code off of Code Pen.
       These stylesheet link elements have been commented out for Code Pen, as we're including the first two stylesheets as "External CSS" using the Code Pen interface instead, and our equivalent of the "css/style.css" file will just be the CSS written in the CSS section of our Code Pen. -->
 
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-      <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  </head>
-  <body>
-    <nav>
-    <div class="nav-wrapper">
-      <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i>Logo</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="garnituri.html"><i class="material-icons">undo</i></a></li>
-        <li><a href="index.html"><i class="material-icons">view_module</i></a></li>
-        <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
-        <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
-      </ul>
-    </div>
-    </nav>
-<div class="row">
-   <div class="col s12 m7">
-     <div class="card">
-       <div class="card-image">
-         <img src="http://pizzacolosseum.ro/wgs/module/produse/files/cartofi%20chips1459424067.jpg">
-         <span class="card-title"><h2>Cartofi la Cuptor</h2></span>
-       </div>
-       <div class="card-content">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    </head>
 
-         <script>
-         var ingrediente = ['Ingrediente:', ' - 500 gr cartofi noi', ' - sare, piper negru', '- Unt aromat cu menta', '- 100 gr unt gras (80% grasime; la temp. camerei)', '- 4 linguri ulei de masline extravirgin (30-35 ml)',
-          ' - 12-15 frunze mari de menta', '- coaja rasa de la 1/2 lamaie mica', '- 1 lingura suc de lamaie',' Mod de preparare: ', ' 1. Se taie untul bucati si se pune intr-un robot. Se adauga uleiul, menta tocata, sucul si coaja de lamaie. Se mixeaza pana menta e bine maruntita si obtineti o pasta omogena. Se pastreaza la frigider. Din cauza uleiului, crema va ramane destul de usor tartinabila si la rece.* va iesi mai mult unt decat aveti nevoie pentru cartofi, dar se pastreaza bine la firgider cam 1 saptamana; il puteti folosi si in alte retete (la fripturi, frigarui, sandwichuri etc).',
-           ' 2. Se curata cartofii noi (fie se freaca cu un sare grunjoasa si un burete metalic, fie se curata normal cu cutitul). In functie de marimea lor se taie in 2 sau 4 felii pe lungime. Se pun la fiert in apa cu sare pana furculita intra usor in ei.',
-           ' 3. Se scurg si se pun intr-un castron.', ' 4. Se adauga 2 lingurite generoase din untul aromat de la pct. 1 Se presara sare si se rasneste piper negru dupa gust.',
-         'Se amesteca usor pana untul se topeste si menta acopera cartofii. Se servesc imediat. Merg bine langa pui la gratar (sau frigarui), langa somon la cuptor (sau pe gratar), cotlete de miel pe gratar.'];
-           for(var i in ingrediente){
-             var x = document.getElementById('divi');
-             document.write('<p>' + ingrediente[i] + '</p>');
-           }
-         </script>
-         <div id = "divi"> </div>
+    <body>
+        <nav>
+            <div class="nav-wrapper #ff8a80">
+                <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="garnituri.html"><i class="material-icons">undo</i></a></li>
+                    <li><a href="index.html"><i class="material-icons">view_module</i></a></li>
+                    <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
+                    <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="row" style="display: flex; justify-content: center">
+            <div class="col s12 m7" style="align-self: center; margin-left:initial">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="http://pizzacolosseum.ro/wgs/module/produse/files/cartofi%20chips1459424067.jpg">
+                        <span class="card-title"><h2>Cartofi la Cuptor</h2></span>
+                    </div>
+                    <div class="card-content">
+
+                        <script>
+                            var ingrediente = ['Ingrediente:', ' - 500 gr cartofi noi', ' - sare, piper negru', '- Unt aromat cu menta', '- 100 gr unt gras (80% grasime; la temp. camerei)', '- 4 linguri ulei de masline extravirgin (30-35 ml)',
+                                ' - 12-15 frunze mari de menta', '- coaja rasa de la 1/2 lamaie mica', '- 1 lingura suc de lamaie', ' Mod de preparare: ',
+                                ' 1. Se taie untul bucati si se pune intr-un robot. Se adauga uleiul, menta tocata, sucul si coaja de lamaie. Se mixeaza pana menta e bine maruntita si obtineti o pasta omogena. Se pastreaza la frigider. Din cauza uleiului, crema va ramane destul de usor tartinabila si la rece.* va iesi mai mult unt decat aveti nevoie pentru cartofi, dar se pastreaza bine la firgider cam 1 saptamana; il puteti folosi si in alte retete (la fripturi, frigarui, sandwichuri etc).',
+                                ' 2. Se curata cartofii noi (fie se freaca cu un sare grunjoasa si un burete metalic, fie se curata normal cu cutitul). In functie de marimea lor se taie in 2 sau 4 felii pe lungime. Se pun la fiert in apa cu sare pana furculita intra usor in ei.',
+                                ' 3. Se scurg si se pun intr-un castron.', ' 4. Se adauga 2 lingurite generoase din untul aromat de la pct. 1 Se presara sare si se rasneste piper negru dupa gust.',
+                                'Se amesteca usor pana untul se topeste si menta acopera cartofii. Se servesc imediat. Merg bine langa pui la gratar (sau frigarui), langa somon la cuptor (sau pe gratar), cotlete de miel pe gratar.'
+                            ];
+                            for (var i in ingrediente) {
+                                var x = document.getElementById('divi');
+                                document.write('<p>' + ingrediente[i] + '</p>');
+                            }
+                        </script>
+                        <div id="divi"> </div>
 
 
 
 
-       </div>
-       <div class="card-action">
-         <a href="http://www.jamilacuisine.ro/cartofi-acordeon-la-cuptor-reteta-video/">Find more!</a>
-       </div>
-     </div>
-   </div>
- </div>
- <!--  Scripts
+                    </div>
+                    <div class="card-action">
+                        <a href="http://www.jamilacuisine.ro/cartofi-acordeon-la-cuptor-reteta-video/">Find more!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--  Scripts
    TODO: Uncomment these script elements once you move this code off of Code Pen.
    These script elements have been commented out for Code Pen, as we're including the first two script elements as "External JavaScript" using the Code Pen interface instead, and our equivalent of the "js/init.js" file will just be the JavaScript written in the JS section of our Code Pen. -->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-   <script src="../../bin/materialize.js"></script>
-   <script src="js/init.js"></script>
- </body>
- </html>
- <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
- <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="../../bin/materialize.js"></script>
+        <script src="js/init.js"></script>
+    </body>
 
-     <script src="js/index.js"></script>
+    </html>
+    <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
+
+    <script src="js/index.js"></script>
 
 
 
 
- </body>
- <footer class="page-footer brown">
-     <div class="container ">
-         <div class="row">
-             <div class="col l6 s12">
-                 <h5 class="red-text text-accent-1">Activam si pe retelele de socializare:</h5>
+</body>
+<footer class="page-footer brown">
+    <div class="container ">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="red-text text-accent-1">Activam si pe retelele de socializare:</h5>
 
-                 <ul>
+                <ul>
 
-                     <li><a class="red-text text-accent-1" href="https://www.instagram.com/">Instagram</a></li>
-                     <li><a class="red-text text-accent-1" href="https://www.facebook.com/">Facebook</a></li>
+                    <li><a class="red-text text-accent-1" href="https://www.instagram.com/">Instagram</a></li>
+                    <li><a class="red-text text-accent-1" href="https://www.facebook.com/">Facebook</a></li>
 
-                 </ul>
-             </div>
-         </div>
-     </div>
- </footer>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
- </html>
+</html>
