--- a/cheesecake.html
+++ b/cheesecake.html
@@ -40,8 +40,8 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 
     <body>
         <nav>
-            <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i>Logo</a>
+            <div class="nav-wrapper #ff8a80">
+                <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="deserturi.html"><i class="material-icons">undo</i></a></li>
                     <li><a href="index.html"><i class="material-icons">view_module</i></a></li>
@@ -50,8 +50,8 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
                 </ul>
             </div>
         </nav>
-        <div class="row">
-            <div class="col s12 m7">
+        <div class="row" style="display: flex; justify-content: center">
+    <div class="col s12 m7" style="align-self: center; margin-left:initial">
                 <div class="card">
                     <div class="card-image">
                         <img src="https://bananachocolate.files.wordpress.com/2013/07/white-chocolate-cheesecake-141.jpg">
@@ -89,6 +89,8 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
                     </div>
                 </div>
             </div>
+          </div>
+
 
             <!--  Scripts
    TODO: Uncomment these script elements once you move this code off of Code Pen.
@@ -108,7 +110,6 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 
 
 </body>
-
 <footer class="page-footer brown">
     <div class="container ">
         <div class="row">
@@ -125,6 +126,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
         </div>
     </div>
 </footer>
+
 
 
 </html>
