--- a/garnituri.html
+++ b/garnituri.html
@@ -1,101 +1,105 @@
 <!DOCTYPE html>
-<html >
-  <head>
+<html>
+
+<head>
     <meta charset="UTF-8">
     <title>Materialize CSS Project Template</title>
 
 
 
     <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
-<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css'>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css'>
 
-        <link rel="stylesheet" href="css/style.css">
-
-
+    <link rel="stylesheet" href="css/style.css">
 
 
-  </head>
 
-  <body style="background-color:  #ffccbc;">
+
+</head>
+
+<body style="background-color:  #ffccbc;">
 
     <!-- Edited version of: http://materializecss.com/templates/starter-template/preview.html
 Search for the text "TODO" in this HTML file, to know what changes you should make when you take this project off of Code Pen to run elsewhere.
 -->
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>Starter Template - Materialize</title>
+    <html>
 
-    <!-- CSS
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+        <title>Starter Template - Materialize</title>
+
+        <!-- CSS
       TODO: Uncomment these stylesheet link elements once you move this code off of Code Pen.
       These stylesheet link elements have been commented out for Code Pen, as we're including the first two stylesheets as "External CSS" using the Code Pen interface instead, and our equivalent of the "css/style.css" file will just be the CSS written in the CSS section of our Code Pen. -->
 
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-      <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  </head>
-  <body>
-    <nav>
-  <div class="nav-wrapper">
-    <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i>Logo</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="index.html"><i class="material-icons">undo</i></a></li>
-      <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
-      <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
-    </ul>
-  </div>
-</nav>
-  <ul class="collection">
-    <li class="collection-item avatar">
-      <img src="http://pizzacolosseum.ro/wgs/module/produse/files/cartofi%20chips1459424067.jpg" alt="" class="circle">
-      <span class="title">Cartofi la Cuptor</span>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="../../dist/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
+        <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    </head>
 
-      <a href="caroficumenta.html" class="secondary-content"><i class="material-icons">forward</i></a>
-    </li>
-    <li class="collection-item avatar">
+    <body>
+        <nav>
+            <div class="nav-wrapper  #ff8a80">
+                <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="index.html"><i class="material-icons">undo</i></a></li>
+                    <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
+                    <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
+                </ul>
+            </div>
+        </nav>
+        <ul class="collection">
+            <li class="collection-item avatar">
+                <img src="http://pizzacolosseum.ro/wgs/module/produse/files/cartofi%20chips1459424067.jpg" alt="" class="circle">
+                <span class="title">Cartofi la Cuptor</span>
 
-      <i class="material-icons circle">folder</i>
-      <img src="https://magieinfarfurie.files.wordpress.com/2013/01/dsc_4075.jpg" alt="" class="circle">
-      <span class="title">Piure de Cartofi</span>
+                <a href="caroficumenta.html" class="secondary-content"><i class="material-icons">forward</i></a>
+            </li>
+            <li class="collection-item avatar">
 
-      <a href="pireucartofi.html" class="secondary-content"><i class="material-icons">forward</i></a>
-    </li>
-  </ul>
+                <i class="material-icons circle">folder</i>
+                <img src="https://magieinfarfurie.files.wordpress.com/2013/01/dsc_4075.jpg" alt="" class="circle">
+                <span class="title">Piure de Cartofi</span>
+
+                <a href="pireucartofi.html" class="secondary-content"><i class="material-icons">forward</i></a>
+            </li>
+        </ul>
 
 
-  <!--  Scripts
+        <!--  Scripts
     TODO: Uncomment these script elements once you move this code off of Code Pen.
     These script elements have been commented out for Code Pen, as we're including the first two script elements as "External JavaScript" using the Code Pen interface instead, and our equivalent of the "js/init.js" file will just be the JavaScript written in the JS section of our Code Pen. -->
-     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../../bin/materialize.js"></script>
-    <script src="js/init.js"></script>
-  </body>
-  </html>
-  <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="../../bin/materialize.js"></script>
+        <script src="js/init.js"></script>
+    </body>
 
-      <script src="js/index.js"></script>
+    </html>
+    <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
+
+    <script src="js/index.js"></script>
 
 
 
 
-  </body>
-  <footer class="page-footer brown">
-      <div class="container ">
-          <div class="row">
-              <div class="col l6 s12">
-                  <h5 class="red-text text-accent-1">Activam si pe retelele de socializare:</h5>
+</body>
+<footer class="page-footer brown">
+    <div class="container ">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="red-text text-accent-1">Activam si pe retelele de socializare:</h5>
 
-                  <ul>
+                <ul>
 
-                      <li><a class="red-text text-accent-1" href="https://www.instagram.com/">Instagram</a></li>
-                      <li><a class="red-text text-accent-1" href="https://www.facebook.com/">Facebook</a></li>
+                    <li><a class="red-text text-accent-1" href="https://www.instagram.com/">Instagram</a></li>
+                    <li><a class="red-text text-accent-1" href="https://www.facebook.com/">Facebook</a></li>
 
-                  </ul>
-              </div>
-          </div>
-      </div>
-  </footer>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
-  </html>
+</html>
